--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,65 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.menu-item-icon{
+  height: 40px !important;
+  width: 40px !important;
+  top: 6px;
+  left: 15px;
+  position: absolute;
+}
+
+.drawer-paper{
+  height: 100%;
+  min-height: 100%;
+}
+
+.drawer-paper > div {
+  position: relative;
+  height: 100%;
+  width: 240px;
+}
+
+#root{
+  min-height: 100%;
+  height: 100%;
+}
+
+#root > div{
+  min-height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  min-height: 100%;
+}
+
+.drawer-header{
+  height: 64px;
+  min-height: 64px;
+}
+
+.app-frame {
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: 100%;
+}
+
+.app-bar{
+  position: absolute;
+  width: calc(100% - 240px) !important;
+  margin-left: 240px;
+}
+
+main{
+  background: #eeeeee;
+  min-height: calc(100% - 64px);
+  width: 100%;
+  margin-top: 64px;
+}
